# neural-density-fields

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  plan-phase1.md  plan-phase2.md  pyproject.toml  restructure.py
docs/: plan-all.md  plan-milestone1-1.md  plan-phase3.md  plan-phase4.md
docs/paper/: main.tex
scripts/: __init__.py  export_high_res_cube.py  generate_data.py  generate_paper_plots.py  inspect_data.py  inspect_predictions.py  main.py  overfit_batch.py  pindf_cli.py  profile_vram_scaling.py  run_gold_standard_benchmark.py  train.py
src/eval/: __init__.py  benchmark.py  ccsd_benchmark.py  inference_utils.py  metrics.py  nci_analysis.py  render_iso.py
src/models/: ndf_model.py
src/models/decoder/: __init__.py  mlp_decoder.py
src/models/mpnn/: __init__.py  schnet_encoder.py
src/models/query_engine/: __init__.py  local_query.py
src/physics/: losses.py  monte_carlo.py
src/training/: trainer.py
src/utils/: cube_export.py
test/: test_milestone5.py  test_mpnn.py  test_mpnn_dummy.py
test/phase1/: test_milestone5.py  test_ndf.py  test_se3.py
test/phase2/: test_delta_benchmark.py  test_delta_learning.py  test_gradient_ablation.py  test_laplacian.py  test_monte_carlo.py  test_trainer.py  test_volume_conservation.py
test/phase3/: test_cube_export.py  test_high_res_sampler.py  test_milestone2.py  test_milestone3.py  test_milestone4.py
